<resources>
    <string name="app_name">Kotlin Open Weather Map</string>

    <string name="select_city">Select City</string>
    <string name="try_again">Try again</string>
    <string name="loading">Loading</string>
    <string name="temp">Temperature:</string>
    <string name="temp_min">Temperature Minimum:</string>
    <string name="temp_max">Temperature Maximum:</string>
    <string name="pressure">Pressure:</string>
    <string name="sea_level">Sea Level:</string>
    <string name="grnd_level">Grnd Level:</string>
    <string name="humidity">Humidity:</string>
    <string name="temp_kf">Temperature Kf:</string>
    <string name="weather">Weather</string>
    <string name="wind">Wind</string>
    <string name="about">About</string>

    <string name="about_this_app">About this app</string>
    <string name="about_this_app_message">This app is under development.\n\nConstantly evolving application, OpenWeather was used to make the queries.\n\nTo know more: <a href="https://openweathermap.org">https://openweathermap.org</a></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
